[releng] Bump Sirius Component to 2023.4.1
Signed-off-by: Arthur Daussy <arthur.daussy@obeo.fr>
Signed-off-by: Jerome Gout<jerome.gout@obeosoft.com>