@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2020 Obeo.
+ * Copyright (c) 2019, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -44,13 +44,13 @@ import org.slf4j.LoggerFactory;
  */
 public class ProjectUnzipper {
 
-    private static final String ZIP_FOLDER_SEPARATOR = "/"; //$NON-NLS-1$
+    private static final String ZIP_FOLDER_SEPARATOR = "/";
 
-    private static final String MANIFEST_JSON_FILE = "manifest.json"; //$NON-NLS-1$
+    private static final String MANIFEST_JSON_FILE = "manifest.json";
 
-    private static final String REPRESENTATIONS_FOLDER = "representations"; //$NON-NLS-1$
+    private static final String REPRESENTATIONS_FOLDER = "representations";
 
-    private static final String DOCUMENTS_FOLDER = "documents"; //$NON-NLS-1$
+    private static final String DOCUMENTS_FOLDER = "documents";
 
     private final Logger logger = LoggerFactory.getLogger(ProjectUnzipper.class);
 
@@ -138,7 +138,7 @@ public class ProjectUnzipper {
         List<ByteArrayOutputStream> outputStreamOfRepresentationDescritors = zipEntryNameToContent.entrySet().stream()
                 .filter(entry -> entry.getKey().startsWith(representationsFolderInZip))
                 .map(Entry::getValue)
-                .collect(Collectors.toList());
+                .toList();
         // @formatter:on
         return outputStreamOfRepresentationDescritors;
     }
