@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022 CEA, Obeo.
+ * Copyright (c) 2022, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -15,9 +15,9 @@ package org.eclipse.papyrus.web.services.relatedelements;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.MissingResourceException;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.eclipse.emf.common.notify.Adapter;
 import org.eclipse.emf.common.notify.AdapterFactory;
@@ -29,6 +29,7 @@ import org.eclipse.emf.edit.provider.IItemLabelProvider;
 import org.eclipse.emf.edit.provider.ItemProviderAdapter;
 import org.eclipse.sirius.components.compatibility.emf.properties.api.IPropertiesValidationProvider;
 import org.eclipse.sirius.components.compatibility.forms.WidgetIdProvider;
+import org.eclipse.sirius.components.compatibility.services.ImageConstants;
 import org.eclipse.sirius.components.core.api.IObjectService;
 import org.eclipse.sirius.components.forms.TreeNode;
 import org.eclipse.sirius.components.forms.components.TreeComponent;
@@ -51,23 +52,23 @@ import org.eclipse.sirius.components.representations.VariableManager;
  */
 public class CurrentTreeProvider {
 
-    private static final String WIDGET_ID = "related/current"; //$NON-NLS-1$
+    private static final String WIDGET_ID = "related/current";
 
-    private static final String CATEGORY_PARENT = "Parent"; //$NON-NLS-1$
+    private static final String CATEGORY_PARENT = "Parent";
 
-    private static final String CATEGORY_CHILDREN = "Children"; //$NON-NLS-1$
+    private static final String CATEGORY_CHILDREN = "Children";
 
-    private static final String TITLE = "Current"; //$NON-NLS-1$
+    private static final String TITLE = "Current";
 
-    private static final String WIDGET_ICON_URL = "/images/arrow_downward_black_24dp.svg"; //$NON-NLS-1$
+    private static final String WIDGET_ICON_URL = "/images/arrow_downward_black_24dp.svg";
 
-    private static final String FOLDER_ICON_URL = "/images/folder_black_24dp.svg"; //$NON-NLS-1$
+    private static final String FOLDER_ICON_URL = "/images/folder_black_24dp.svg";
 
-    private static final String CHILDREN_CATEGORY_ICON_URL = "/images/subdirectory_arrow_right_black_24dp.svg"; //$NON-NLS-1$
+    private static final String CHILDREN_CATEGORY_ICON_URL = "/images/subdirectory_arrow_right_black_24dp.svg";
 
-    private static final String CATEGORY_KIND = "siriusWeb://category"; //$NON-NLS-1$
+    private static final String CATEGORY_KIND = "siriusWeb://category";
 
-    private static final String CONTAINMENT_REFERENCE_KIND = "siriusWeb://category/containment-reference"; //$NON-NLS-1$
+    private static final String CONTAINMENT_REFERENCE_KIND = "siriusWeb://category/containment-reference";
 
     private final IObjectService objectService;
 
@@ -136,7 +137,7 @@ public class CurrentTreeProvider {
                        }
                    })
                    .sorted(Comparator.comparing(EStructuralFeature::getName))
-                   .collect(Collectors.toList());
+                   .toList();
         // @formatter:on
     }
 
@@ -145,7 +146,7 @@ public class CurrentTreeProvider {
         if (eReference.isMany()) {
             result = (EList<?>) self.eGet(eReference);
         } else {
-            result = Optional.ofNullable(self.eGet(eReference)).stream().collect(Collectors.toList());
+            result = Optional.ofNullable(self.eGet(eReference)).stream().toList();
         }
         return result;
     }
@@ -154,9 +155,9 @@ public class CurrentTreeProvider {
         String result = null;
         var self = variableManager.get(VariableManager.SELF, Object.class).orElse(null);
         if (self instanceof String) {
-            result = "category/" + (String) self; //$NON-NLS-1$
+            result = "category/" + (String) self;
         } else if (self instanceof EReference) {
-            result = "reference/" + ((EReference) self).getName(); //$NON-NLS-1$
+            result = "reference/" + ((EReference) self).getName();
         } else if (self != null) {
             result = this.objectService.getId(self);
         }
@@ -190,8 +191,12 @@ public class CurrentTreeProvider {
         Adapter adapter = this.adapterFactory.adapt(eObject, IItemLabelProvider.class);
         if (adapter instanceof ItemProviderAdapter) {
             ItemProviderAdapter editingDomainItemProvider = (ItemProviderAdapter) adapter;
-            String key = String.format("_UI_%s_%s_feature", eReference.getEContainingClass().getName(), eReference.getName()); //$NON-NLS-1$
-            return editingDomainItemProvider.getString(key);
+            String key = String.format("_UI_%s_%s_feature", eReference.getEContainingClass().getName(), eReference.getName());
+            try {
+                return editingDomainItemProvider.getString(key);
+            } catch (MissingResourceException mre) {
+                // Expected for dynamic instances.
+            }
         }
         return null;
     }
@@ -206,7 +211,7 @@ public class CurrentTreeProvider {
         } else if (self != null) {
             result = this.objectService.getImagePath(self);
         }
-        return result;
+        return Optional.ofNullable(result).orElse(ImageConstants.DEFAULT_SVG);
     }
 
     private String getNodeKind(VariableManager variableManager) {
