@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022 CEA, Obeo.
+ * Copyright (c) 2022, 2023 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -17,8 +17,9 @@ import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.MissingResourceException;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 import org.eclipse.emf.common.notify.Adapter;
 import org.eclipse.emf.common.notify.AdapterFactory;
@@ -32,6 +33,7 @@ import org.eclipse.emf.edit.provider.IItemPropertySource;
 import org.eclipse.emf.edit.provider.ItemProviderAdapter;
 import org.eclipse.sirius.components.compatibility.emf.properties.api.IPropertiesValidationProvider;
 import org.eclipse.sirius.components.compatibility.forms.WidgetIdProvider;
+import org.eclipse.sirius.components.compatibility.services.ImageConstants;
 import org.eclipse.sirius.components.core.api.IObjectService;
 import org.eclipse.sirius.components.forms.TreeNode;
 import org.eclipse.sirius.components.forms.components.TreeComponent;
@@ -45,15 +47,15 @@ import org.eclipse.sirius.components.representations.VariableManager;
  */
 public class IncomingTreeProvider {
 
-    private static final String WIDGET_ID = "related/incoming"; //$NON-NLS-1$
+    private static final String WIDGET_ID = "related/incoming";
 
-    private static final String TITLE = "Incoming"; //$NON-NLS-1$
+    private static final String TITLE = "Incoming";
 
-    private static final String WIDGET_ICON_URL = "/images/west_black_24dp.svg"; //$NON-NLS-1$
+    private static final String WIDGET_ICON_URL = "/images/west_black_24dp.svg";
 
-    private static final String INCOMING_REFERENCE_ICON_URL = "/images/west_black_24dp.svg"; //$NON-NLS-1$
+    private static final String INCOMING_REFERENCE_ICON_URL = "/images/west_black_24dp.svg";
 
-    private static final String INCOMING_REFERENCES_KIND = "siriusWeb://category/incoming-references"; //$NON-NLS-1$
+    private static final String INCOMING_REFERENCES_KIND = "siriusWeb://category/incoming-references";
 
     private final IObjectService objectService;
 
@@ -104,13 +106,13 @@ public class IncomingTreeProvider {
                 // @formatter:off
                 var settings = xref.getInverseReferences(root).stream()
                                    .sorted(Comparator.comparing(setting -> setting.getEStructuralFeature().getName()))
-                                   .collect(Collectors.toList());
+                                   .toList();
                 Map<EReference, List<EObject>> sourceByReference = new LinkedHashMap<>();
                 for (Setting setting : settings) {
                     sourceByReference.computeIfAbsent((EReference) setting.getEStructuralFeature(), ref -> new ArrayList<>()).add(setting.getEObject());
                 }
                 // @formatter:on
-                result = sourceByReference.entrySet().stream().map(entry -> new IncomingReferences(entry.getKey(), entry.getValue())).collect(Collectors.toList());
+                result = sourceByReference.entrySet().stream().map(entry -> new IncomingReferences(entry.getKey(), entry.getValue())).toList();
             }
         } else if (self instanceof IncomingReferences) {
             result = ((IncomingReferences) self).getSources();
@@ -122,7 +124,7 @@ public class IncomingTreeProvider {
         String result = null;
         var self = variableManager.get(VariableManager.SELF, Object.class).orElse(null);
         if (self instanceof IncomingReferences) {
-            result = "reference/" + ((IncomingReferences) self).getReference().getName(); //$NON-NLS-1$
+            result = "reference/" + ((IncomingReferences) self).getReference().getName();
         } else if (self != null) {
             result = this.objectService.getId(self);
         }
@@ -137,12 +139,16 @@ public class IncomingTreeProvider {
             EObject eObject = ((IncomingReferences) self).getSources().get(0);
             result = eReference.getName();
             if (eReference.isContainment()) {
-                result = "owned " + result; //$NON-NLS-1$
+                result = "owned " + result;
                 Adapter adapter = this.adapterFactory.adapt(eObject, IItemLabelProvider.class);
                 if (adapter instanceof ItemProviderAdapter) {
                     ItemProviderAdapter editingDomainItemProvider = (ItemProviderAdapter) adapter;
-                    String key = String.format("_UI_%s_%s_feature", eReference.getEContainingClass().getName(), eReference.getName()); //$NON-NLS-1$
-                    result = editingDomainItemProvider.getString(key);
+                    String key = String.format("_UI_%s_%s_feature", eReference.getEContainingClass().getName(), eReference.getName());
+                    try {
+                        result = editingDomainItemProvider.getString(key);
+                    } catch (MissingResourceException mre) {
+                        // Expected for dynamic instances.
+                    }
                 }
             } else {
                 Adapter adapter = this.adapterFactory.adapt(eObject, IItemPropertySource.class);
@@ -170,7 +176,7 @@ public class IncomingTreeProvider {
         } else if (self != null) {
             result = this.objectService.getImagePath(self);
         }
-        return result;
+        return Optional.ofNullable(result).orElse(ImageConstants.DEFAULT_SVG);
     }
 
     private String getNodeKind(VariableManager variableManager) {
